force-app/main/default/objects/Coligada__c/Coligada__c.object-meta.xml
<CustomObject>
    <label>Coligada</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coligadas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>