force-app/main/default/objects/Coligada__c/fields/CNPJColigadas__c.field-meta.xml
<CustomField>
    <fullName>CNPJColigadas__c</fullName>
    <label>CNPJ Coligadas</label>
    <length>14</length>
    <type>Text</type>
</CustomField>