force-app/main/default/objects/Coligada__c/fields/CNPJMatriz__c.field-meta.xml
<CustomField>
    <fullName>CNPJMatriz__c</fullName>
    <label>CNPJ Matriz</label>
    <length>14</length>
    <type>Text</type>
</CustomField>