force-app/main/default/objects/Coligada__c/fields/CodigoGrupo__c.field-meta.xml
<CustomField>
    <fullName>CodigoGrupo__c</fullName>
    <externalId>true</externalId>
    <label>Código do Grupo</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>