force-app/main/default/objects/Coligada__c/listViews/CriadasIntegracao.listView-meta.xml
<ListView>
    <fullName>CriadasIntegracao</fullName>
    <columns>CodigoGrupo__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>ifutu</value>
    </filters>
    <label>Criadas pela Integração</label>
</ListView>